--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -42,7 +42,6 @@
         <main role="main" class="pb-3">
             <div class="row">
                 <div class="col-md-12">
-
                 </div>
             </div>
             <hr />
@@ -50,8 +49,8 @@
             <div class="row">
                 <div class=" offset-md-4 offset-sm-1 col-md-6">
                     <div id="search">
-
-                        <form asp-controller="Home" asp-action="Index" method="post">
+                        <form asp-controller="Home" asp-action="Index" method="post"
+                              autocomplete="off">
                             <div class="form-group">
                                 <input style="text-align:center;width:400px" type="text" name="product" placeholder="Örn: yumurta" class="form-control" />
                             </div>
