- Arama sırasında A101 arayüz domaini üzerinde yapılan UI selector değişiklikleri yüzünden arama çalışmıyordu, gerekli olan düzenleme yapıldı.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -52,7 +52,8 @@
                         <form asp-controller="Home" asp-action="Index" method="post"
                               autocomplete="off">
                             <div class="form-group">
-                                <input style="text-align:center;width:400px" type="text" name="product" placeholder="Örn: yumurta" class="form-control" />
+                                <input style="text-align:center;width:400px" type="text"
+                                       name="product" placeholder="Örn: yumurta" class="form-control" />
                             </div>
                             <button type="submit" style="width:400px;" class="btn btn-success">Ara</button>
                         </form>
